# FilTer

./: .build.sh  .gitignore  .travis.yml  CMakeLists.txt  README.md  travis.sh
scripts/: dependencies.sh
src/: main.cpp
src/ConsoleGui/: CMakeLists.txt
src/ExtensionFilter/: CMakeLists.txt
src/ExtensionFilter/src/: Filter.cpp  Filter.hpp
src/FileHolder/: Holder.cpp  Holder.h
src/FolderLocation/: FileHandler.cpp  FileHandler.h
src/Handler/: Handler.cpp  Handler.hpp
